--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,16 @@
-# Redirect .com domain (without www.) to .dev
+# Redirect Netlify domain to tomherni.dev
+[[redirects]]
+  from = "https://tomherni.netlify.app"
+  to = "https://tomherni.dev"
+  force = true
+
+# Redirect .com domain (without www.) to tomherni.dev
 [[redirects]]
   from = "https://tomherni.com"
   to = "https://tomherni.dev"
   force = true
 
-# Redirect .com domain (with www.) to .dev
+# Redirect .com domain (with www.) to tomherni.dev
 [[redirects]]
   from = "https://www.tomherni.com"
   to = "https://tomherni.dev"
