--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@web/dev-server": "^0.3.0",
     "clean-css": "^5.3.2",
     "fs-extra": "^11.1.1",
-    "html-minifier-terser": "^7.2.0"
+    "html-minifier-terser": "^7.2.0",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard": "^34.0.0"
   },
   "repository": {
     "type": "git",
