--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,10 @@
 {
   "root": true,
   "extends": ["eslint:recommended", "eslint-config-prettier"],
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 2020
+  },
   "env": {
     "browser": true,
     "node": true
