--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "test": "wtr \"test/**/*.test.js\" --node-resolve --coverage",
     "build": "rimraf dist && rollup -c rollup.config.js",
     "start:build": "npm run build && wds --root-dir dist --app-index index.html --open",
-    "lint": "npm run lint:eslint && npm run lint:stylelint",
-    "lint:eslint": "eslint \"**/*.{js,mjs}\" --fix --ignore-path .gitignore",
-    "lint:stylelint": "stylelint \"src/**/*.css\" --fix",
+    "lint": "eslint \"**/*.{js,mjs}\" --fix --ignore-path .gitignore && stylelint \"src/**/*.css\" --fix",
+    "lint:check": "eslint \"**/*.{js,mjs}\" --ignore-path .gitignore && stylelint \"src/**/*.css\"",
     "format": "prettier \"**/*.{css,html,js,json,md}\" --write --ignore-path .gitignore",
-    "fix": "npm run lint && npm run format",
+    "format:check": "prettier \"**/*.{css,html,js,json,md}\" --check --ignore-path .gitignore",
     "prepare": "husky install"
   },
   "devDependencies": {
