--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tomherni",
+  "name": "tomherni.dev",
   "version": "1.0.0",
   "description": "Personal website of Tom Herni.",
   "author": "Tom Herni",
