--- a/netlify.toml
+++ b/netlify.toml
@@ -38,14 +38,17 @@
 [[redirects]]
   from = "https://tomherni.netlify.app"
   to = "https://tomherni.dev"
+  status = 301
   force = true
 
 [[redirects]]
   from = "https://tomherni.com"
   to = "https://tomherni.dev"
+  status = 301
   force = true
 
 [[redirects]]
   from = "https://www.tomherni.com"
   to = "https://tomherni.dev"
+  status = 301
   force = true
