fix: quickly navigating on iOS shows a blank page

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Cache-Control = "no-cache"
+    Cache-Control = "public, max-age=0, must-revalidate"
     Cross-Origin-Opener-Policy = "same-origin"
     Cross-Origin-Embedder-Policy = "require-corp"
     X-Frame-Options = "DENY"
