chore: update dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
   "exclude": ["node_modules", "dist"],
   "ts-node": {
     "esm": true,
-    "experimentalSpecifierResolution": "node"
+    "experimentalSpecifierResolution": "node",
+    "transpileOnly": true
   }
 }
