feat: use node-canvas instead of Puppeteer for creating social images

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "serve dist",
     "build": "node --loader ts-node/esm src/generator/build-prod.ts",
-    "build:dev": "ts-node src/generator/build-dev.ts",
+    "build:dev": "node --loader ts-node/esm src/generator/build-dev.ts",
     "lint": "eslint \"**/*.{js,ts}\" --fix --ignore-path .gitignore && stylelint \"src/**/*.css\" --fix",
     "lint:check": "eslint \"**/*.{js,ts}\" --ignore-path .gitignore && stylelint \"src/**/*.css\"",
     "format": "prettier \"**/*.{css,html,js,json,ts}\" --write --ignore-path .gitignore",
@@ -27,6 +27,7 @@
     "@types/prismjs": "^1.26.3",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "canvas": "^3.0.1",
     "clean-css": "^5.3.3",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
@@ -37,7 +38,6 @@
     "marked": "^11.1.0",
     "prettier": "^3.0.3",
     "prismjs": "^1.29.0",
-    "puppeteer": "^23.11.1",
     "serve": "^14.2.1",
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
