--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "scripts": {
     "start": "serve dist",
-    "build": "node --loader ts-node/esm src/generator/build-prod.ts",
-    "build:dev": "node --loader ts-node/esm src/generator/build-dev.ts",
+    "build": "tsc -noEmit && tsx src/generator/build-prod.ts",
+    "build:dev": "tsc -noEmit && tsx src/generator/build-dev.ts",
     "lint": "eslint \"**/*.{js,ts}\" --fix --ignore-path .gitignore && stylelint \"src/**/*.css\" --fix",
     "lint:check": "eslint \"**/*.{js,ts}\" --ignore-path .gitignore && stylelint \"src/**/*.css\"",
     "format": "prettier \"**/*.{css,html,js,json,ts}\" --write --ignore-path .gitignore",
@@ -42,7 +42,7 @@
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "terser": "^5.26.0",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   },
   "lint-staged": {
