--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint:check": "eslint \"**/*.{js,ts}\" --ignore-path .gitignore && stylelint \"src/**/*.css\"",
     "format": "prettier \"**/*.{css,html,js,json,ts}\" --write --ignore-path .gitignore",
     "format:check": "prettier \"**/*.{css,html,js,json,ts}\" --check --ignore-path .gitignore",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.23.3",
@@ -32,9 +32,9 @@
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "html-minifier-terser": "^7.2.0",
-    "husky": "^8.0.3",
+    "husky": "^9.1.6",
     "js-yaml": "^4.1.0",
-    "lint-staged": "^15.0.2",
+    "lint-staged": "^15.2.10",
     "marked": "^11.1.0",
     "prettier": "^3.0.3",
     "prismjs": "^1.29.0",
