chore: update eslint

--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
     "start": "tsx scripts/dev-server.ts",
     "build": "tsc -noEmit && tsx src/generator/build-prod.ts",
     "build:dev": "tsx src/generator/build-dev.ts",
-    "lint": "eslint \"**/*.{js,ts}\" --fix --ignore-path .gitignore && stylelint \"src/**/*.css\" --fix",
-    "lint:check": "eslint \"**/*.{js,ts}\" --ignore-path .gitignore && stylelint \"src/**/*.css\"",
+    "lint": "eslint \"**/*.{js,ts}\" --fix && stylelint \"src/**/*.css\" --fix",
+    "lint:check": "eslint \"**/*.{js,ts}\" && stylelint \"src/**/*.css\"",
     "format": "prettier \"**/*.{css,html,js,json,ts}\" --write --ignore-path .gitignore",
     "format:check": "prettier \"**/*.{css,html,js,json,ts}\" --check --ignore-path .gitignore",
     "prepare": "husky"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.23.3",
+    "@eslint/compat": "^1.2.5",
+    "@eslint/js": "^9.18.0",
     "@types/clean-css": "^4.2.11",
     "@types/html-minifier-terser": "^7.0.2",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.10.4",
     "@types/prismjs": "^1.26.3",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
     "canvas": "^3.0.1",
     "clean-css": "^5.3.3",
-    "eslint": "^8.52.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.14.0",
     "html-minifier-terser": "^7.2.0",
     "husky": "^9.1.6",
     "js-yaml": "^4.1.0",
@@ -42,7 +43,8 @@
     "stylelint-config-standard": "^37.0.0",
     "terser": "^5.26.0",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.19.1"
   },
   "lint-staged": {
     "**/*.css": "stylelint --fix",
