refactor: re-map type imports and move types to src

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths": {
+      "@types": ["./src/types"]
+    }
   },
   "include": ["src", "types"],
   "exclude": ["node_modules", "dist"]
