--- a/.github/workflows/pull-request-main.yml
+++ b/.github/workflows/pull-request-main.yml
@@ -1,4 +1,4 @@
-name: Main CI
+name: Pull Request to main
 
 on:
   pull_request:
@@ -6,24 +6,30 @@ on:
       - main
 
 env:
-  NODE_VERSION: '20.x'
+  NODE_VERSION: '20'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout branch
-        uses: actions/checkout@v3
-      - name: Use Node.js ${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
+          registry-url: 'https://registry.npmjs.org'
+
       - name: Install dependencies
         run: npm ci
-      - name: Lint
+
+      - name: Linting
         run: npm run lint:check
-      - name: Check formatting
+
+      - name: Formatting
         run: npm run format:check
-      - name: Build
+
+      - name: Create build
         run: npm run build
