--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,5 @@
       "@types": ["./src/types"]
     }
   },
-  "include": ["src", "types"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src"]
 }
